--- a/style.css
+++ b/style.css
@@ -1,38 +1,41 @@
 table {
-  font-family: "Arial Black", Gadget, sans-serif;
-  border: 5px solid #000000;
-  background-color: #FEBD10;
+  border: 2px solid #FEBD10;
+  background-color: #EEEEEE;
   width: 100%;
-  height: 200px;
-  text-align: center;
-  border-collapse: collapse;
+  text-align: left;
 }
 table td, table th {
-  border: 2px solid #4A4A4A;
+  border: 2px solid #4D4D4D;
   padding: 3px 2px;
 }
 table tbody td {
   font-size: 13px;
-  color: #E6E6E6;
 }
 table tr:nth-child(even) {
-  background: #8E8E8E;
+  background: #9E9E9E;
 }
 table thead {
-  background: #000000;
-  border-bottom: 2px solid #000000;
+  background: #FFBE10;
+  background: -moz-linear-gradient(top, #ffce4c 0%, #ffc428 66%, #FFBE10 100%);
+  background: -webkit-linear-gradient(top, #ffce4c 0%, #ffc428 66%, #FFBE10 100%);
+  background: linear-gradient(to bottom, #ffce4c 0%, #ffc428 66%, #FFBE10 100%);
+  border-bottom: 2px solid #444444;
 }
 table thead th {
   font-size: 15px;
   font-weight: bold;
-  color: #E6E6E6;
-  text-align: center;
-  border-left: 2px solid #4A4A4A;
+  text-align: left;
 }
-table thead th:first-child {
-  border-left: none;
-}
-
 table tfoot td {
-  font-size: 12px;
+  font-size: 14px;
+}
+table tfoot .links {
+  text-align: right;
+}
+table tfoot .links a{
+  display: inline-block;
+  background: #1C6EA4;
+  color: #FFFFFF;
+  padding: 2px 8px;
+  border-radius: 5px;
 }
