--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ table {
   background-color: #EEEEEE;
   width: 100%;
   text-align: left;
+  border-collapse: collapse;
 }
 table td, table th {
   border: 2px solid #4D4D4D;
