--- a/style.css
+++ b/style.css
@@ -16,16 +16,17 @@ table tr:nth-child(even) {
   background: #9E9E9E;
 }
 table thead {
-  background: #FFBE10!important;
-  background: -moz-linear-gradient(top, #ffce4c 0%, #ffc428 66%, #FFBE10!important 100%);
-  background: -webkit-linear-gradient(top, #ffce4c 0%, #ffc428 66%, #FFBE10!important 100%);
-  background: linear-gradient(to bottom, #ffce4c 0%, #ffc428 66%, #FFBE10!important 100%);
+  background: #FFBE10;
   border-bottom: 2px solid #444444;
 }
 table thead th {
   font-size: 15px;
   font-weight: bold;
   text-align: left;
+  border-left: 2px solid #4D4D4D;
+}
+table thead th:first-child {
+  border-left: none;
 }
 table a, a:hover, a:visited {
     color: black;   
