--- a/style.css
+++ b/style.css
@@ -13,8 +13,11 @@ table td, table th {
 table tbody td {
   font-size: 13px;
 }
-table tr:nth-child(even) {
-  background: #9E9E9E !important;
+tbody tr:nth-of-type(2n) {
+background: #9E9E9E!important;
+}
+tr:nth-of-type(1n) {
+background: #FEBD10;
 }
 table thead {
   background: #FFBE10;
