--- a/style.css
+++ b/style.css
@@ -13,10 +13,10 @@ table td, table th {
 table tbody td {
   font-size: 13px;
 }
-tbody tr:nth-of-type(2n) {
+table tbody tr:nth-of-type(2n) {
   background: #9E9E9E!important;
 }
-tr:nth-of-type(1n) {
+table tbody tr:nth-of-type(1n) {
   background: #FEBD10;
 }
 table thead {
