--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ table tbody tr:nth-of-type(1n) {
   background: #B5B5B5;
 }
 table thead {
-  background: #FFBE10;
+  background: #FEBD10;
   border-bottom: 2px solid #444444;
 }
 table thead th {
