--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 table {
   font-family: Arial, Helvetica, sans-serif;
   border: 2px solid #FEBD10;
-  background-color: #636363 !important;
+  background-color: #636363;
   width: 100%;
   text-align: left;
   border-collapse: collapse;
