--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 table {
   font-family: Arial, Helvetica, sans-serif;
-  border: 2px solid #FEBD10;
+  border: 2px solid #4D4D4D;
   background-color: #636363;
   text-align: left;
   border-collapse: collapse;
