--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ table thead th {
   font-size: 15px;
   font-weight: bold;
   text-align: left;
-  border-left: 2px solid #4D4D4D;
+  border: 2px solid #4D4D4D;
 }
 table a, a:hover, a:visited {
     color: #FEBD10;   
