--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 table {
   font-family: Arial, Helvetica, sans-serif;
-  border: 2px solid #4D4D4D;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #4D4D4D;
   background-color: #636363;
   text-align: left;
   border-collapse: collapse;
