--- a/style.css
+++ b/style.css
@@ -32,6 +32,9 @@ table thead th {
   text-align: left;
   border: 2px solid #4D4D4D;
 }
-table a, a:hover, a:visited {
+table a, a:hover {
     color: #FEBD10;   
+}
+table a:visited {
+    color: #CB9501;   
 }
