--- a/style.css
+++ b/style.css
@@ -8,7 +8,10 @@ table {
   border-collapse: collapse;
 }
 table td, table th {
-  border: 2px solid #4D4D4D;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #4D4D4D;
+  background-color: #6363
   padding: 3px 2px;
 }
 table tbody td {
