--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ table td, table th {
   border-width: 2px;
   border-color: #4D4D4D;
   background-color: #636363
-  padding: 3px 2px;
+  padding: 5px;
 }
 table tbody td {
   font-size: 13px;
