--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ table td, table th {
 table tbody td {
   font-size: 13px;
   color: #EBEBEB;
+  border-style: solid;
+  border-width: 2px;
+  border-color: #4D4D4D;
 }
 table tbody tr:nth-of-type(2n) {
   background: #2D2D2D!important;
