--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ table {
   text-align: left;
   border-collapse: collapse;
   width: 100%;
+  table-layout: fixed;
 }
 table td, table th {
   border-style: solid;
@@ -14,6 +15,7 @@ table td, table th {
   border-color: #4D4D4D;
   background-color: #636363
   padding: 5px;
+  word-wrap: break-word;
 }
 table tbody td {
   font-size: 13px;
@@ -21,6 +23,7 @@ table tbody td {
   border-style: solid;
   border-width: 2px;
   border-color: #4D4D4D;
+  word-wrap: break-word;
 }
 table tbody tr:nth-of-type(2n) {
   background: #2D2D2D!important;
