--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ table td, table th {
   border-color: #4D4D4D;
   background-color: #636363
   padding: 5px;
+  width: auto;
   word-wrap: break-word;
 }
 table tbody td {
@@ -23,6 +24,7 @@ table tbody td {
   border-style: solid;
   border-width: 2px;
   border-color: #4D4D4D;
+  width: auto;
   word-wrap: break-word;
 }
 table tbody tr:nth-of-type(2n) {
