--- a/style.css
+++ b/style.css
@@ -23,8 +23,7 @@ table tbody td {
   border-style: solid;
   border-width: 2px;
   border-color: #4D4D4D;
-  width:1px;
-  white-space:nowrap;
+  word-wrap: break-word;
 }
 table tbody tr:nth-of-type(2n) {
   background: #2D2D2D!important;
